--- a/static/css/style-success.css
+++ b/static/css/style-success.css
@@ -18,17 +18,20 @@ body {
     align-items: center;
 }
 
-/* ヘッダー */
-header {
-    padding: 10px 5px;
-    color: #000000;
-}
-.logo img {
-    width: 220px;
-    height: 150px;
-}
+
 
 /* メイン */
-main h2 {
-    margin: 0 auto;
+.inner {
+    text-align: center;
+    margin: 50px 150px;
+}
+
+.inner h3 {
+    font-weight: 100;
+    margin-bottom: 50px;
+}
+
+.btn {
+    margin-top: 30px;
+    
 }
