--- a/templates/success.html
+++ b/templates/success.html
@@ -48,11 +48,11 @@
                     <form method="post" action="/send">
                         <div class="ui form">
                             <div class="field">
-                                <label>ユーザ名</label>
-                                <input type="text" name="name" placeholder="ユーザ名">
+                                <label>お名前</label>
+                                <input type="text" name="name" placeholder="お名前">
                             </div>
                             <div class="field">
-                                <label>パスワード</label>
+                                <label>連絡可能なメールアドレス</label>
                                 <input type="email" name="email" placeholder="メールアドレス">
                             </div>
                             </div>
