--- a/templates/gift_return.html
+++ b/templates/gift_return.html
@@ -41,35 +41,35 @@
 
 <body>
     <div class="form-container">
-        <form id="registrationForm" method="POST" enctype="multipart/form-data">
-            <div class="ui ccontainer">
-                <h2 id="editor-title" class="ui center aligned">おすすめプレゼントはこちら</h2>
-                <div class="ui form">
-                    <div class="flex" id="product-display">
-                        <div class="image">
-                            <img src="{{ df[0].image }}" class="preview" id="product-image">
+        <div class="ui ccontainer">
+            <h2 id="editor-title" class="ui center aligned">おすすめプレゼントはこちら</h2>
+            <div class="ui form">
+                <div class="flex" id="product-display">
+                    <div class="image">
+                        <img src="{{ df[0].image }}" class="preview" id="product-image">
+                    </div>
+                    <div class="content">
+                        <h2 id="product-name">{{ df[0].product_name }}</h2>
+                        <div class="description">
+                            <a href="{{ df[0].link }}" class="ui orange large button" target="_blank"
+                                id="product-link">購入はこちらから</a>
                         </div>
-                        <div class="content">
-                            <h2 id="product-name">{{ df[0].product_name }}</h2>
-                            <div class="description">
-                                <a href="{{ df[0].link }}" class="ui orange large button" target="_blank"
-                                    id="product-link">購入はこちらから</a>
-                            </div>
-                            <div class="button_flex">
-                                <button id="submit-button" class="ui fluid large teal submit button"
-                                    type="submit">このプレゼントをセーブする</button>
-                                <button class="negative ui button" id="next-button">次へ</button>
-                            </div>
-                            <div class="button_back">
-                                <a href="{{ url_for('view_survey', id=id) }}"
-                                    class="ui button large submit button">アンケートへ戻る</a>
-                                <a href="{{ url_for('index') }}" class="ui button large submit button">トップページへ戻る</a>
-                            </div>
+                        <div class="button_flex">
+                            <form id="registrationForm" method="POST" enctype="multipart/form-data">
+                                <button id="save-button" class="ui fluid large teal submit button" type="submit"
+                                    name="action" value="save">このプレゼントをセーブする</button>
+                            </form>
+                            <button class="negative ui button" id="next-button">次へ</button>
+                        </div>
+                        <div class="button_back">
+                            <a href="{{ url_for('view_survey', id=id) }}"
+                                class="ui button large submit button">アンケートへ戻る</a>
+                            <a href="{{ url_for('index') }}" class="ui button large submit button">トップページへ戻る</a>
                         </div>
                     </div>
                 </div>
             </div>
-        </form>
+        </div>
     </div>
 
     <footer class="footer">
