誤字の修正

--- a/templates/question.html
+++ b/templates/question.html
@@ -77,7 +77,7 @@
                 <select name="age" id="age">
                     <!-- 最初は空欄に -->
                     <option value="" disabled selected>選択してください</option>
-                    <option value="10s">~10代</option>
+                    <option value="10s">10代</option>
                     <option value="20s">20代</option>
                     <option value="30s">30代</option>
                     <option value="40s">40代</option>
