--- a/static/css/style-gift_return.css
+++ b/static/css/style-gift_return.css
@@ -77,6 +77,9 @@ body {
     max-height: 80%;
 }
 
+.title {
+    font-size: 40px;
+}
 
 .content {
     padding: 5%;
@@ -84,13 +87,8 @@ body {
     line-height: 2;
 }
 
-.description {
-    margin-top: 10%;
-    margin-bottom: 25%;
-}
-
 .button_flex {
-    margin: 5% 0 5% 0;
+    margin: 20% 0 20% 0;
     display: flex;
     justify-content: space-between;
 }
